<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Modbus_DataType" Id="{a3b2176d-28b6-43cb-847c-62e5359a4252}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Modbus_DataType :
(
	eInt16	 := 1,
	eInt32	 := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>